@@ -123,6 +123,8 @@ New functions:
 
 * Use newer Doxygen.
 
+* Optimize slightly strtol and strtoul functions.
+
 To build the documentation, doxygen-1.3.4 or newer is strongly recommended.
 
 *** Changes in avr-libc-1.0:
